; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-common/audio/dsp_filters/fft/extr_fft.c_exp_imag.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-common/audio/dsp_filters/fft/extr_fft.c_exp_imag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (double)* @exp_imag to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @exp_imag(double %0) #0 {
  %2 = alloca %struct.TYPE_3__, align 4
  %3 = alloca double, align 8
  store double %0, double* %3, align 8
  %4 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %2, i32 0, i32 0
  %5 = load double, double* %3, align 8
  %6 = call i32 @cos(double %5)
  store i32 %6, i32* %4, align 4
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %2, i32 0, i32 1
  %8 = load double, double* %3, align 8
  %9 = call i32 @sin(double %8)
  store i32 %9, i32* %7, align 4
  %10 = bitcast %struct.TYPE_3__* %2 to i64*
  %11 = load i64, i64* %10, align 4
  ret i64 %11
}

declare dso_local i32 @cos(double) #1

declare dso_local i32 @sin(double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
